--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Modal Header</h4>
+            <h4 class="modal-title" id="modalT">Modal Header</h4>
           </div>
-          <div class="modal-body">
+          <div class="modal-body" id="modalB">
             <p id>Some text in the modal.</p>
           </div>
           <div class="modal-footer">
